<resources>
    <string name="app_name">Measure</string>
    <string name="action_settings">设置</string>
    <string name="init">初始化</string>
    <string name="measure">测量</string>
    <string name="measure_with_explain">测量(通过扫描RFID)</string>
    <string name="measure_with_location">测量(通过定位)</string>
    <string name="title_activity_init">初始化</string>
    <string name="title_activity_measure">测量</string>
    <string name="previous_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="finish">完　成</string>
    <string name="init_step1">(1/3)基坑设置</string>
    <string name="init_step2">(2/3)工位设置</string>
    <string name="init_step3">(3/3)点位设置</string>
    <string name="measure_step1">1/3</string>
    <string name="measure_step2">2/3</string>
    <string name="measure_step3">3/3</string>
    <string name="pit_name">基坑名</string>
    <string name="confirm_back">确定退出？</string>
    <string name="confirm_remove">确定删除？</string>
    <string name="back_explain">退出后将不保存刚录入的内容！</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="workbench_name">工位名</string>
    <string name="workbench">工位</string>
    <string name="rfid">RFID</string>
    <string name="latitude_and_longitude">经纬度</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="enter_workpoint">编辑点位</string>
    <string name="add_workbench">添加工位</string>
    <string name="add_workpoint">添加点位</string>
    <string name="edit_this_workbench">编辑此工位</string>
    <string name="edit_this_workpoint">编辑此点位</string>
    <string name="n_a">N/A</string>
    <string name="workpoint_name">点位名</string>
    <string name="workpoint">点位</string>
    <string name="measure_type">测量方法</string>
    <string name="measure_count">测量次数</string>
    <string name="allowable_deviation">允许误差</string>
    <string name="measure_with_select">测量(通过选择一个工位)</string>
    <string name="select_workbench">选择工位</string>
    <string name="title_activity_measure_by_select">MeasureBySelectActivity</string>
    <string name="select_a_workbench">请选择一个工位</string>
    <string name="select_a_work_point">请选择一个点位</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_measure_by_location">MeasureByLocationActivity</string>
    <string name="title_activity_setting">设置</string>
    <string name="host_setting">host设置</string>
    <string name="host_example">例：192.168.1.123</string>
    <string name="clear_host">清除host</string>
    <string name="title_activity_select_work_point">请选择一个点位</string>

    <string name="ReadDataFailure">读取数据失败</string>
</resources>
